osprey_worker/src/osprey/engine/query_language/tests/test_validate_count_over/test_excessive_threshold_rejected.txt
error: `CountOver` threshold exceeds cap
--> main.sml:1:71
     |
   1 | Query = CountOver(predicate=UserLoginIp == '1.1.1.1', window='10m') >= 1000000
     |                                                                        ^ threshold must be `<= 100000`